--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="bg-color5 filter"></div>
   </div>
 
-  <div class="go-to-gallery-btn"><i class="fas fa-image"></i></div>
+  <div class="go-to-gallery-btn"><img src="./stack-of-photos.png"></i></div>
 
 
 
